# Skale

./: .gitignore  CMakeLists.txt  DEVELOPER_GUIDE.md  LICENSE  README.md  ROADMAP.md  claude.md
project/: project.godot  skale.gdextension  skale.gdextension.uid
project/scenes/: main.tscn
project/scripts/: main.gd  orbit_camera.gd  test.gd  test.gd.uid
src/core/: CMakeLists.txt  body_core.cpp  body_core.h  joint_core.cpp  joint_core.h  simulation_core.cpp  simulation_core.h  skale_types.h
src/extension/: CMakeLists.txt  register_types.cpp  register_types.h  skale_hello.cpp  skale_hello.h
src/extension/physics/: skale_actuator.cpp  skale_actuator.h  skale_ball.cpp  skale_ball.h  skale_body.cpp  skale_body.h  skale_fixed.cpp  skale_fixed.h  skale_hinge.cpp  skale_hinge.h  skale_motor.cpp  skale_motor.h  skale_simulation.cpp  skale_simulation.h  skale_slider.cpp  skale_slider.h  skale_spring.cpp  skale_spring.h
